--- a/bank/src/App.css
+++ b/bank/src/App.css
@@ -29,10 +29,10 @@
 }
 
 .navContainer{
-  display: flex;
-  justify-content: space-evenly;
-  width: 100%;
-  padding:0px 0px;
+  display: grid;
+  grid-template:1fr / 0.8fr 1fr 1fr 1fr;
+  width: 93%;
+  text-align: center;
 }
 
 .linkStyle{
@@ -77,7 +77,7 @@
 
 .btnContianerStyle{
   margin: 30px 0px;
-  width: 400px;
+  width: 300px;
   height: 370px;
   display: flex;
   flex-direction: column;
@@ -85,8 +85,6 @@
   justify-content: center;
   background: #0EA2E366;
   box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-  backdrop-filter: blur( 20px );
-  -webkit-backdrop-filter: blur( 20px );
   border-radius: 10px;
   border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
@@ -94,6 +92,7 @@
 .searchAreaContainer{
   display: flex;
   flex-direction:  column;
+  align-items: center;
   margin-bottom: 25px;
   font-size: 1.1rem;
   width: 250px;
@@ -123,13 +122,13 @@
   font-weight: 800;
   font-size: 1.1rem;
   margin-top: 8px;
+  padding:2px 5px;
 }
 
 .footersectionContainer{
   display:flex;
   flex-direction: column;
   align-items: center;
-  height: 40vh;
   background-color: var(--contrastColor);
   color: var(--fontColor);
 }
@@ -141,7 +140,6 @@
 .gridContainer{
   display: grid;
   grid-template:1fr / 1fr 1fr;
-  grid-auto-flow: column;
   margin-top: 25px;
 }
 
@@ -185,6 +183,10 @@
     font-size: 1.4rem;
   }
 
+  .btnContianerStyle{
+    width: 400px;
+  }
+
   .searchAreaContainer{
     display: flex;
     flex-direction:  column;
@@ -193,6 +195,7 @@
     width: 360px;
     align-items: center;
   }
+
 
 .labelStyle{
 font-size: 1.4rem;
@@ -225,4 +228,27 @@ width: 90%;
   }
 
   
+}
+
+@media screen and (min-width:1000px){
+
+  .navContainer{
+    display: grid;
+    grid-template:1fr / 0.8fr 1fr 1fr 1fr;
+    padding:7px 55px;
+    text-align: center;
+  }
+
+  .sectionContainer{
+    line-height: 33px;
+  }
+
+  .titleSection{
+    font-size: 2.4rem;
+    margin-bottom: 25px;
+  }
+  
+
+
+
 }
